fix button spacing

--- a/customize.dist/src/less2/include/support.less
+++ b/customize.dist/src/less2/include/support.less
@@ -189,6 +189,7 @@
             }
             .cp-support-list-actions {
                 display: flex;
+                gap: @variables_icon_margin;
                 order: 3;
                 margin-top: 5px;
                 .cp-support-hide {
